# quanda

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INFO.md  LICENSE  Makefile  README.md  codecov.yml  fact_tracing_benchmark.ipynb  mypy.ini  pyproject.toml  pytest.ini  tox.ini
.github/scripts/: validate_code_snippets.py
.github/workflows/: lint.yml  mypy.yml  package_publish.yml  pr-validation.yml  release.yml  tests.yml  type-lint.yml  validate_code_snippets.yml  version_bumping.yml
bench_prep/: mnist_unit_tests.sh  run.py  run.sh  train.py  train_mnist.sh  train_mnist_bench.py
bench_prep/conf/: config.yaml
config/: bert_qnli.yaml  cifar_resnet9.yaml  config.yaml  default.yaml  mnist_lenet.yaml
config/adv_dataset/: fashion_mnist.yaml  fashion_mnist_unit.yaml  mrpc.yaml  svhn.yaml
config/eval/: bert_qnli.yaml  cifar_resnet9.yaml  gpt2_trex.yaml  mnist_lenet.yaml
config/eval_dataset/: cifar10_test.yaml  cifar10_test_mixed_main.yaml  cifar10_test_shortcut.yaml  cifar10_test_subclass.yaml  mnist_test.yaml  mnist_test_mixed_main.yaml  mnist_test_shortcut.yaml  mnist_test_subclass.yaml  mnist_test_unit.yaml  mnist_test_unit_shortcut.yaml  mnist_test_unit_subclass.yaml  qnli_test.yaml  qnli_test_mixed_main.yaml
config/logger/: tensorboard.yaml  wandb.yaml
config/model/: bert_base_cased.yaml  cifar_resnet9_base.yaml  cifar_resnet9_subclass.yaml  mnist_lenet_base.yaml  mnist_lenet_mislabeling.yaml  mnist_lenet_subclass.yaml
config/train_dataset/: cifar10_train.yaml  cifar10_train_mislabeling.yaml  cifar10_train_shortcut.yaml  cifar10_train_subclass.yaml  mnist_train.yaml  mnist_train_mislabeling.yaml  mnist_train_shortcut.yaml  mnist_train_subclass.yaml  mnist_train_unit.yaml  mnist_train_unit_mislabeling.yaml  mnist_train_unit_shortcut.yaml  mnist_train_unit_subclass.yaml  qnli_train.yaml  qnli_train_mislabeling.yaml
config/trainer/: default.yaml
config/val_dataset/: cifar10_val.yaml  cifar10_val_mislabeling.yaml  cifar10_val_shortcut.yaml  cifar10_val_subclass.yaml  mnist_val.yaml  mnist_val_mislabeling.yaml  mnist_val_shortcut.yaml  mnist_val_subclass.yaml  mnist_val_unit_shortcut.yaml  qnli_val.yaml
docs/: Makefile  README.md  api.rst  conf.py  index.rst  requirements_sphinx.txt  usage.rst
docs/html/: .buildinfo  genindex.html  getting_started.html  index.html  modules.html  objects.inv  py-modindex.html  quanda.benchmarks.downstream_eval.html  quanda.benchmarks.ground_truth.html  quanda.benchmarks.heuristics.html  quanda.benchmarks.html  quanda.benchmarks.resources.html  quanda.explainers.global_ranking.html  quanda.explainers.html  quanda.explainers.wrappers.html  quanda.html  quanda.metrics.downstream_eval.html  quanda.metrics.ground_truth.html  quanda.metrics.heuristics.html  quanda.metrics.html  quanda.utils.datasets.html  quanda.utils.datasets.transformed.html  quanda.utils.functions.html  quanda.utils.html  quanda.utils.training.html  search.html  searchindex.js
docs/source/: background.rst  conf.py  contributing.rst  contributing.txt  contributing_to_quanda.rst  getting_started.rst  how_to_evaluate.rst  index.rst  quickstart.rst  quickstart.txt  tutorials.rst
experiments/: entailment.py  generate_predictions.py  upload_dataset.py
quanda/: __init__.py
quanda/benchmarks/: __init__.py  base.py  config_parser.py
quanda/explainers/: __init__.py  aggregators.py  base.py  functional.py  random.py  utils.py
quanda/metrics/: __init__.py  aggr_strategies.py  aggregators.py  base.py
quanda/resources/: __init__.py  benchmark_urls.py
quanda/tasks/: __init__.py  aggr_strategies.py  aggregate_attributions.py  base.py  global_ranking.py  influential_per_sample.py  proponents_per_sample.py
quanda/toy_benchmarks/: __init__.py  base.py
quanda/utils/: __init__.py  cache.py  common.py  explanations.py  tasks.py  tokenization.py  validation.py
scripts/: README.md  compute_explanations.py  compute_lds_subset_logits.sh  compute_metrics.py  compute_mislabeling_si_metric.py  compute_randomization_metric.py  delete_bench_assets.py  eval.sh  explain_model.py  fig_1_left.py  fig_1_plot.py  generate_config.py  make_benchmark.py  mnist_benchmark.sh  mnist_unit_tests.sh  mnist_unit_tests_hub.sh  model_sanity_checks.py  model_sanity_tests.py  opt_results_to_cfg.py  outfile_summary.py  plot_results.py  precompute_subset_logits_range.sh  precompute_subset_logits_subset.py  prefetch_bench.py  run.py  run_bench_eval.py  test_benchmarks.py  train.py  train.sh  train_and_push_to_hub.py  train_bert_base_cased_qnli.py  train_cifar.py  train_cifar_parallel.sh  train_cifar_single.sh  train_lds.sh  train_lds_subset.py  train_mnist.sh  train_mnist_parallel.sh  train_mnist_single.sh  train_model.py  (+1 more)
scripts/bert_qnli_bench/: bench_defs.sh  compute_lds_subset_logits_qnli.sh  compute_lds_subset_logits_qnli_all.sh  eval_defs.sh  eval_qnli.sh  eval_qnli_pt1.sh  eval_qnli_pt2.sh  plot_qnli.sh  precompute_qnli_subset_logits.sh  precompute_qnli_subset_logits_all.sh  qnli_plot_config.json  train_qnli.sh  train_qnli_lds.sh
scripts/cifar_resnet9_bench/: bench_defs.sh  cifar_plot_config.json  eval_all_cifar.sh  eval_cifar.sh  eval_cifar_arnoldi.sh  eval_cifar_pt1.sh  eval_cifar_pt2.sh  eval_defs.sh  plot_cifar.sh  train_cifar.sh  train_cifar_lds.sh
singularity/: quanda_build.def  quanda_pre_build.def  train.def
slurm/: build.sh  compute_exaplanations.sh  compute_explanations.py  compute_explanations.sbatch  compute_explanations.sh  copy_slurm_job.sh  debug.sh  env_quanda.def  get_logs.sh  run.sh  slurm_job.sbatch  train.sh  train_grid.sh  train_job.sh
slurm/apptainer/: quanda_build.def  (+1 more)
src/: __init__.py  usage.py
tests/: conftest.py  models.py  other_tests.py
tutorials/: demo.ipynb  demo_benchmarks.ipynb  demo_explainers.ipynb  demo_metrics.ipynb  demo_prep.ipynb  demo_visualization.ipynb  quanda_demo.ipynb  quanda_demo.py  quanda_quickstart.ipynb  tiny_image_net_resnet18_train.py  tiny_imagenet_dataset.py  usage_testing.py  usage_testing_representer.py  usage_testing_vit.py  vit_mini_image_net.py
(+953 files in other folders)
