[project]
name = "quanda"
description = "quanda"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["explainable ai", "xai", "machine learning", "deep learning"]

dependencies = [
    "numpy>=1.19.5",
    "torch>=1.13.1",
    "captum@git+https://github.com/pytorch/captum",
    "lightning>=1.4.0",
    "torchmetrics>=1.4.0",
    "tqdm>=4.0.0",
    "annoy>=1.17.0",
]
dynamic = ["version"]

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = true
#ignore_errors = true # TODO: change this

# Black formatting
[tool.black]
line-length = 127
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = [ # Install wtih pip install .[dev] or pip install -e '.[dev]' in zsh
    "coverage>=7.2.3",
    "flake8>=6.0.0",
    "pytest<=7.4.4",
    "flake8-pytest-style>=1.3.2",
    "pytest-cov>=4.0.0",
    "pytest-mock==3.10.0",
    "pre-commit>=3.2.0",
    "mypy>=1.8.0",
    "black[d]>=23.0.0",
    "isort>=5.0.0",
    "types-tqdm>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx>=7.0.0",
    "numpydoc",
]
